[package]
name = "lala"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
containerd-client = {git = "https://github.com/containerd/rust-extensions"}
tokio = { version = "1.17.0", features = ["full"] }
tonic = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pcap = "0.9.1"
pnet = "0.29.0"
nix = "0.23.1"
anyhow = "1.0"
rmp-serde = "1.0.0"
clap = { version = "3.1.1", features = ["derive"] }
