[package]
name = "mirrord-agent"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
containerd-client = {git = "https://github.com/containerd/rust-extensions"}
tokio = { version = "1", features = ["full"] }
tonic = "0.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pcap = "0.9.1"
pnet = "0.29.0"
nix = "0.23.1"
anyhow = "1"
base64 = "0.13"
clap = { version = "3.1.2", features = ["derive"] }
